updated form elements 16px font minimum to prevent auto zoom on mobile

--- a/src/components/Onboarding/Onboarding.css
+++ b/src/components/Onboarding/Onboarding.css
@@ -48,7 +48,7 @@
 }
 
 .onboarding__subtext {
-  font-size: 1rem;
+  font-size: 1.1rem;
   text-align: center;
   opacity: 0.8;
   margin-top: -1rem;
@@ -77,7 +77,7 @@
 input[type='checkbox'] {
   width: 20px;
   height: 20px;
-  accent-color: white;
+  accent-color: black;
 }
 
 /* Progress dots */
@@ -205,5 +205,6 @@ input[type='checkbox'] {
   input[type='checkbox'] {
     width: 26px;
     height: 26px;
+    accent-color: black;
   }
 }
